// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chars <- #constructor() 1`] = `
Chars {
  "size": 3,
  "source": Numbers {
    "end": 97,
    "size": 3,
    "start": 99,
    "state": 99,
    "step": -1,
  },
}
`;

exports[`Chars <- #constructor() 2`] = `
Chars {
  "size": 1114112,
  "source": Numbers {
    "end": 1114111,
    "size": 1114112,
    "start": 0,
    "state": 0,
    "step": 1,
  },
}
`;

exports[`Chars <- #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Chars <- #drop() 2`] = `
Chars {
  "size": 3,
  "source": Numbers {
    "done": true,
    "end": 0,
    "size": 0,
    "start": 0,
    "state": 0,
    "step": 0,
  },
}
`;

exports[`Chars <- #next() 1`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`Chars <- #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`Chars <- #next() 3`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`Chars <- #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Chars -> #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Chars -> #drop() 2`] = `
Chars {
  "size": 3,
  "source": Numbers {
    "done": true,
    "end": 0,
    "size": 0,
    "start": 0,
    "state": 0,
    "step": 0,
  },
}
`;

exports[`Chars -> #next() 1`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`Chars -> #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`Chars -> #next() 3`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`Chars -> #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Numbers <- #constructor() 1`] = `
Numbers {
  "end": 1,
  "size": 3,
  "start": 3,
  "state": 3,
  "step": -1,
}
`;

exports[`Numbers <- #constructor() 2`] = `
Numbers {
  "end": 1,
  "size": Infinity,
  "start": 9007199254740991,
  "state": 9007199254740991,
  "step": -1,
}
`;

exports[`Numbers <- #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Numbers <- #drop() 2`] = `
Numbers {
  "done": true,
  "end": 0,
  "size": 0,
  "start": 0,
  "state": 0,
  "step": 0,
}
`;

exports[`Numbers <- #next() 1`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`Numbers <- #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`Numbers <- #next() 3`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`Numbers <- #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Numbers -> #constructor() 1`] = `
Numbers {
  "end": 9007199254740991,
  "size": Infinity,
  "start": 0,
  "state": 0,
  "step": 1,
}
`;

exports[`Numbers -> #constructor() 2`] = `
Numbers {
  "end": 9007199254740991,
  "size": Infinity,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`Numbers -> #constructor() 3`] = `
Numbers {
  "end": 3,
  "size": 3,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`Numbers -> #constructor() 4`] = `
Numbers {
  "end": 9007199254740991,
  "size": Infinity,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`Numbers -> #constructor() 5`] = `
Numbers {
  "done": true,
  "end": 0,
  "size": 0,
  "start": 0,
  "state": 0,
  "step": 0,
}
`;

exports[`Numbers -> #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Numbers -> #drop() 2`] = `
Numbers {
  "done": true,
  "end": 0,
  "size": 0,
  "start": 0,
  "state": 0,
  "step": 0,
}
`;

exports[`Numbers -> #next() 1`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`Numbers -> #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`Numbers -> #next() 3`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`Numbers -> #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
